<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.producto.UpdateProductoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
            android:ems="10"
            android:hint="@string/msg_nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
            android:ems="10"
            android:hint="@string/msg_descripcion"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PHONE_NUMBER"
            android:ems="10"
            android:hint="@string/msg_precio"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_cantidad"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btUpdateProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_updateProducto" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#2196F3"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/btn_choose_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Choose image" />

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload image" />

        </LinearLayout>>
    </LinearLayout>

</ScrollView>